Fixed spacing

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -25,27 +25,6 @@ a:hover {
     background-color: transparent;
 }
 
-/* Fix spacing in document */
-.title {
-  margin-top: 2em !important;
-  margin-bottom: 0.75em;
-}
-.section h1,
-.section h2, 
-.section h3, 
-.section h4, 
-.section h5 { 
-  padding-top: 3em !important; /* adding so much padding because theme adds a margin-top: -65px by default */
-  margin-bottom: 0.75em;
-}
-
-@media (min-width: 992px) {
-    .col-md-9 {
-      width: 75%;
-      padding-left: 5em !important;
-    }
- }
- 
 /* Document font size */
 body {
   font-size: 16px;
